# cli.cxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
apps/aws/: CMakeLists.txt  default.nix  main.cxx
apps/aws/src/aws/commands/: s3.hxx
apps/hello/: CMakeLists.txt  default.nix  main.cxx
cli/: CMakeLists.txt  default.nix
cli/cmake/: CliConfig.cmake.in  SetupTesting.cmake
cli/docs/: configuration.md
cli/src/cli/: cli.hxx  commands.hxx  commands.test.cxx  context.hxx  context.test.cxx  options.hxx  options.test.cxx  parser.cxx  parser.hxx  traits.hxx  traits.test.cxx  type_array.hxx  type_enum.hxx  type_enum.test.cxx  type_index.hxx  type_name.hxx  type_name.test.cxx  value_type.hxx  watch_method.hxx  watch_method.test.cxx
